# RAG-website

./: .envrc.sample  README.md  pyproject.toml
src/rag_website/: __init__.py  model.py  settings.py  state.py  vectorstore.py
src/rag_website/agent/: answer_checker.py  answerer.py  hallucination_checker.py  retrieval_checker.py  retriever.py  router.py  web_searcher.py
